--- a/src/main/resources/templates/user/timesheet.html
+++ b/src/main/resources/templates/user/timesheet.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.5.1/css/bootstrap-datepicker3.min.css" />
 <!-- 		<link rel="stylesheet" href="../../../css/timesheet.css" /> -->
-        <link rel="stylesheet" href="/timesheet/css/timesheet.css" />
+        <link rel="stylesheet" href="/css/timesheet.css" />
     </head>
     <body>
         <div th:replace="fragments/header :: header"></div>
@@ -179,7 +179,7 @@
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.5.1/js/bootstrap-datepicker.min.js"></script>
 
-        <script src="/timesheet/js/timesheet.js"></script>
+        <script src="/js/timesheet.js"></script>
 <!-- 		<script src="../../../js/timesheet.js"></script> -->
     </body>
 </html>
