--- a/src/main/resources/templates/admin/project.html
+++ b/src/main/resources/templates/admin/project.html
@@ -109,8 +109,8 @@
 
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-    <script src="/timesheet/js/multiselect.min.js"></script>
+    <script src="/js/multiselect.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.5.1/js/bootstrap-datepicker.min.js"></script>
-    <script src="/timesheet/js/project.js"></script>
+    <script src="/js/project.js"></script>
 </body>
 </html>
